infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: round-robin-raw
  labels:
    app.kubernetes.io/name: devops-roundrobin
    app.kubernetes.io/part-of: round-robin
