infra/k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: round-robin-app
  labels:
    app.kubernetes.io/name: round-robin-app
spec:
  selector:
    app.kubernetes.io/name: round-robin-app
  ports:
    - name: http
      port: 80
      targetPort: http
